<resources>
    <string name="app_name">COEP Moodle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login to COEP Moodle</string>
    <string name="title_activity_moodle">COEP Moodle</string>
    <string name="title_activity_about">About</string>
    <string name="image_chooser">File Chooser</string>
    <string name="access_menu">Just tap on hambruger menu(in the top right corner of the home activity.
    It will be denoted by three parallel and horizontal lines.</string>
    <string name="login_moodle">To login into moodle , just go to menu-->Login to COEP Moodle section.
    There you will be presented with a form asking you \"Username\" and \"Password\". Just enter the necessary values and
    click on \"SIGN IN\" button. You will be automatically redirected COEP Moodle website and logged in to COEP Moodle</string>
    <string name="login_failed">If your login fails by saying \"Invalid Login\", go back to login page and enter correct
    details</string>
    <string name="login_successful">For accessing moodle after you have logged in succeessfully, just click on \"Go to
    COEP Moodle\" option from the menu.Please note that , last entered loginID and password are saved in the app. So you
    don\'t have to login again after your login was successful! After a successful login, you just have to select \"Go to COEP
    moodle \" option from menu every time you want to see moodke.<b>DO NOT</b>change the information via login page after
    successful login. After successful login, you should always use \"GO to COEP Moodle\" option.</string>
    <string name="issues">Still have doubts/isssues ??Contect the developer. See the about page of the app from the menu.</string>
    <string name ="about">"COEP Moodle is a small app to help students of COEP to access Moodle from their smartphones/tablets.</string>
</resources>
