<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:title="Manual"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sathe.ashutosh.coepmoodle.ManualActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ffffff"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_margin="16dp">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="How to access menu ?"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/access_menu"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ffffff"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:text="How to login to COEP Moodle ?"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/login_moodle"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ffffff"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:text="What should I do if my login fails ?"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/login_failed"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ffffff"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:text="How to access Moodle after successful login?"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/login_successful"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ffffff"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:text=""/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/issues"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
